--- a/Application Short term loan.html
+++ b/Application Short term loan.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Dragon Finance Application Short Term Loan</title>
+    <link rel="icon" type="image/x-icon" href="Dragon.jpg">
   <style>
 
     body{
@@ -130,7 +131,7 @@
   </div>
 
   <div id="proceed">
-    <a href="Homepage.html"><button>Proceed</button></a>
+    <a href="Pending.html"><button>Proceed</button></a>
   </div>
 
 </body>
