--- a/Current Short term loans.html
+++ b/Current Short term loans.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dragon Finance Current Short Term Loan</title>
+    <link rel="icon" type="image/x-icon" href="Dragon.jpg">
     <style>
       * {
         box-sizing: border-box;
