--- a/Homepage.html
+++ b/Homepage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Dragon Finance Website</title>
-  <link rel="icon" href="Dragon.jpg" type="image">
+  <link rel="icon" type="image/x-icon" href="Dragon.jpg">
   <style>
     .header {
         color: chocolate;
@@ -117,8 +117,8 @@
 
   <div class="navigation">
       <a href="#">ABOUT US</a>
-      <a href="#">OUR SERVICES</a>
-      <a href="#">CONTACT US</a>
+      <a href="OurServicesPage.html">OUR SERVICES</a>
+      <a href="ContactUsPage.html">CONTACT US</a>
       <a href="LoginPage.html">LOGIN</a>
   </div>
 
