--- a/LoginPage.html
+++ b/LoginPage.html
@@ -60,6 +60,7 @@
 <body>
     <div>
         <p class="header">Login page</p>
+        <link rel="icon" type="image/x-icon" href="Dragon.jpg">
     </div>
 
     <div>
