--- a/OurServicesPage.html
+++ b/OurServicesPage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Dragon Finance Services</title>
+    <link rel="icon" type="image/x-icon" href="Dragon.jpg">
   <style>
 
     .header{
@@ -97,7 +98,7 @@
       <hr color="dodgerblue"/>
       <p class="stLoans">Short term loans</p>
       <p id="stDescription">In Dragon Finance we provide short term loans for services such as student loans, basic short term loans and loans for businesses and investment.
-        </br>To apply for short term loans, click on <a href="">here.</a></p>
+        </br>To apply for short term loans, click on <a href="Short Term Loan.html">here.</a></p>
       <hr color="dodgerblue"/>
     </div>
 
