--- a/ContactUsPage.html
+++ b/ContactUsPage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Dragon Finance Website</title>
+    <link rel="icon" type="image/x-icon" href="Dragon.jpg">
   <style>
     body{
         margin: 30px;
