--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Registration Page</title>
+    <link rel="icon" type="image/x-icon" href="Dragon.jpg">
   <style>
     body{
         margin: 65px;
