--- a/Short Term Loan.html
+++ b/Short Term Loan.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Dragon Finance Short Term Loan</title>
+    <link rel="icon" type="image/x-icon" href="Dragon.jpg">
   <style>
 
     body{
