--- a/Application Short term loan.html
+++ b/Application Short term loan.html
@@ -58,6 +58,15 @@
       color: black;
       background-color: azure;
     }
+    /* #contact{
+      text-align: center;
+      font-size: medium;
+      position: absolute;
+      bottom: 10%;
+      left: 5px;
+      color: black;
+      background-color: azure;
+    } */
 
   </style>
 </head>
