--- a/OurServicesPage.html
+++ b/OurServicesPage.html
@@ -124,7 +124,7 @@
     </div>
 
     <div>
-      <a href="Homepage.html"><button class="hpBut">ABOUT US</button></a>
+      <a href="index.html"><button class="hpBut">ABOUT US</button></a>
       <a href="ContactUsPage.html"><button class="cuBut">CONTACT US</button></a>
     </div>
 
