--- a/LoginPage.html
+++ b/LoginPage.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="login">
-        <a href="Homepage.html"><button>LOGIN</button></a>
+        <a href="index.html"><button>LOGIN</button></a>
     </div>
 
     <div class="other">
