--- a/Pending.html
+++ b/Pending.html
@@ -42,7 +42,7 @@
         </br>If you have any inquiry, you can contact us at <a href="ContactUsPage.html">here</a>
         </br>In the meantime, you can continue browsing our website as well!
         </p>
-        <a href="Homepage.html"><button>ABOUT US</button></a>
+        <a href="index.html"><button>ABOUT US</button></a>
     </div>
 </body>
 </html>
